# WearablesInternational

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE.txt  README.md  pyproject.toml
WUI/: make_vector_store.py  wearables.css  wearables.py
wearablesinternational/: Artefacts.py  Exceptions.py  Models.py  Preprocessing.py  Sources.py  Utils.py  __init__.py
wearablesinternational/Devices/: EmbracePlus.py  EmpaticaE4.py  NoWatch.py  OuraRing.py  ReaderFactory.py  Readers.py
