[tool.poetry]
name = "wearablesinternational"
version = "0.1.0"
description = "Wearable Device Processing Toolkit"
authors = ["Gideon Vos"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pytz = "2024.1"
numpy = "^2.2.1"
pandas = "2.2.2"
xgboost = "^2.1.3"
boto3 = "1.34.113"
fastavro = "^1.10.0"
pyarrow = "^18.1.0"
taipy = "^4.0.2"
scikit-learn = "^1.6.1"
requests-toolbelt = "^1.0.0"
openai = "^1.60.1"
mdit-plain = "^1.0.1"
langchain = "^0.3.15"
langchain-openai = "^0.3.2"
faiss-cpu = "^1.9.0.post1"
langchain-community = "^0.3.15"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
